# API-with-fastapi-and-SQLAlchemy

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  env-example  init.sh  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 220dd6714db5_update_table.py  4bc6ab3117c5_update_tables_and_fk.py  8d1c514dc9c7_create_table.py  9b497b4c60e1_create_table.py  b0857cfdbbfa_update_table.py  b8bdaef34405_create_table.py  e6c3930a9448_create_table.py
src/: __init__.py  main.py  routers.py
src/configs/: base_settings.py  session.py  tags.py
src/database/: __init__.py  session.py
src/models/: base.py
src/players/: controller.py  model.py  schema.py
src/schemas/: base.py
src/teams/: controller.py  model.py  schema.py
src/users/: controller.py  schema.py
src/users/schemas/: user.py
