[tool.poetry]
name = "api-with-fastapi-and-sqlalchemy"
version = "0.1.0"
description = "API build with FastAPI"
authors = ["Denilson Silva <162153089+AroMight@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
SQLAlchemy = "^2.0.31"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
uvicorn = "^0.30.1"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

